--- a/resume.html
+++ b/resume.html
@@ -6,12 +6,59 @@
     <link rel="stylesheet" href="resume.css">
     <title>Resume</title>
 </head>
-<body>
+<body class="body">
 <header>
-    <h1>My Resume</h1>
+    <h1 class="h1">My Resume</h1>
 </header>
-<main></main>
-
+<main>
+<section class="resume">
+    <container class="persinf">
+        <h2>Personal Info</h2>
+        <ul>
+            <li>Ім'я:Артем</li>
+            <br>
+            <li>Вік: 14 років </li>
+            <br>
+            <li>Народився в місті Дніпро, проживаю на Чернігівщині </li>
+            <br>
+            <li>На данний момент живу на території Англії </li>
+            <br>
+            <li>Вправно володію Англійською Мовою </li>
+            <br>
+            <li>Маю британського кота (Залишив в Україні)</li>
+            <br>
+            <li>Раніше Займався Роботехнікою, та писав коди в IDLE Python </li>
+            <br>
+            <li>Маю досвід в малюванні, 2 роки, та сертифікат Лауреата </li>
+            <br>
+            <li>Зараз намагаюсь активно понурюватись в середовище програмування </li>
+            <br>
+        </ul>
+        <div class="photo">
+        <img src="photo_2023-10-16_20-12-56.jpg" width="270px" height="350px">\    
+        </div>
+    </container>
+</section>
+<p></p>
+<section class="extrainf">
+<h3>Extra Info</h3>
+<p>
+    <ul>
+        <li>Email: artemi05276@gmail.com </li>
+        <li>Phone: +380687464055 [UKR] </li>
+        <li>Adress: Html street 8, London, UK</li>
+    </ul>
+</p>
+<h4>Social Media</h4>
+<ul>
+    <li><a href="#">Instagram</a></li>
+    <br>
+    <li><a href="#">Facebook</a></li>
+    <br>
+    <li><a href="#">Telegram</a></li>
+</ul>
+</section>
+</main>
 </body>
 <footer>
 
