--- a/resume.html
+++ b/resume.html
@@ -13,6 +13,9 @@
 <main>
 <section class="resume">
     <container class="persinf">
+        <div class="photo">
+            <img src="photo_2023-10-16_20-12-56.jpg" width="270px" height="350px">   
+            </div>
         <h2>Personal Info</h2>
         <ul>
             <li>Ім'я:Артем</li>
@@ -32,11 +35,7 @@
             <li>Маю досвід в малюванні, 2 роки, та сертифікат Лауреата </li>
             <br>
             <li>Зараз намагаюсь активно понурюватись в середовище програмування </li>
-            <br>
         </ul>
-        <div class="photo">
-        <img src="photo_2023-10-16_20-12-56.jpg" width="270px" height="350px">\    
-        </div>
     </container>
 </section>
 <p></p>
@@ -60,7 +59,10 @@
 </section>
 </main>
 </body>
-<footer>
 
+<footer>
+(c)This page was created by student of Hillel IT School
 </footer>
+
+
 </html>
